shyam/learnk8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels: 
    app: demo
    env: dev
  namespace: shyam
spec:
  containers:
  - image: nginx
    name: mypod
