shyam/learnk8s/podaffinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: shyam
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                  - demo
            topologyKey: opology.kubernetes.io/zone
      containers:
      - name: nginx
        image: nginx
