shyam/learnk8s/topoligyspead.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  namespace: shyam
spec:
  replicas: 6
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: example
      containers:
        - name: example-container
          image: nginx
      volumes:
        - name: my-volume
          persistentVolumeClaim:
            claimName: mypvc
