shyam/learnk8s/clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app: demo-app
  namespace: shyam
spec:
  type: ClusterIP
  selector:
    app: demo
  ports:
  - port: 80
    targetPort: 80
